--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
     <link href="https://api.mapbox.com/mapbox-gl-js/v3.3.0/mapbox-gl.css" rel="stylesheet">
     <script src="https://api.mapbox.com/mapbox-gl-js/v3.3.0/mapbox-gl.js"></script>
+
+    <script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-draw/v1.4.3/mapbox-gl-draw.js'></script>
+    <link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-draw/v1.4.3/mapbox-gl-draw.css'
+        type='text/css' />
+
     <style>
         body {
             margin: 0;
@@ -196,6 +201,19 @@
             })
         );
         map.addControl(new mapboxgl.NavigationControl());
+
+        // Draw options
+        var drawOptions = {
+            displayControlsDefault: false,
+            controls: {
+                polygon: true,
+                point: true,
+                trash: true
+            },
+        };
+        var Draw = new MapboxDraw(drawOptions);
+        map.addControl(Draw, 'top-right');
+
 
 
         map.on('load', () => {
