--- a/test.html
+++ b/test.html
@@ -775,6 +775,7 @@
                 currentMode = "simple_select"
                 lockProperty.turnOn()
                 drawControllVisible(false)
+                landUseClickLock = true
             })
 
             const loadButton = document.createElement("button")
